# Portfolio

./: .eslintrc  .eslintrc.json  .gitignore  .prettierrc  .swcrc  CMakeLists.txt  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js
assets/fonts/: sample
assets/images/: sample
config/: wt_config.xml
portfolio/: .prettierrc.js  package-lock.json  package.json
portfolio/public/: index.html
portfolio/src/: App.js  Content.js  index.css
portfolio/src/Containers/Footer/: Footer.js  Footer.module.css
portfolio/src/Containers/Greetings/: Greetings.css  Greetings.js
portfolio/src/Containers/Skills/: ImageCard.js  ImageCard.module.css  SkillCard.js  SkillCard.module.css  SkillSection.js  SkillSection.module.css  Skills.css  Skills.js
portfolio/src/Containers/SocialMedia/: SocialMedia.js
portfolio/src/Context/: Theme-context.js
portfolio/src/Context/Data/: ThemeList.js
portfolio/src/Pages/Home/: Home.js  index.js
portfolio/src/components/: Container.js  Navbar.js
public/scripts/: viewport.js
src/: App.jsx  index.css  main.cpp  main.jsx
src/assets/animations/: Greeting.fbx  JumpingDown.fbx  Jumping_Down.fbx  Male_Laying_Pose.fbx  Standing_Greeting.fbx  Typing.fbx
src/assets/models/: darkModeAvtar.fbx  lightModeAvtar.fbx  lightModeAvtar.glb  my_3d_model.fbx  my_3d_model.glb
src/components/Footer/: Footer.cpp  Footer.hpp
src/components/Header/: Header.hpp
src/components/routes/: web.jsx
src/pages/HomePage/: HomePage.cpp  HomePage.hpp
src/pages/ProjectsPage/: ProjectsPage.cpp  ProjectsPage.hpp
src/utils/: Theme.cpp  Theme.hpp  index.ts
(+34 files in other folders)
